修改字体和背景图片的重复方式

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -72,5 +72,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: center center / 100% 100% no-repeat url("/main-bg.png");
+  background: center center / 100% 100% repeat url("/main-bg.png");
 }
